tests/parse/error/list_unclosed.err
Error: Unclosed delimiter (, parsing list
   ╭─[tests/parse/error/list_unclosed.scm:1:6]
   │
 1 │ (3132
   · ┬    ┬  
   · ╰─────── Unclosed delimiter (
   ·      │  
   ·      ╰── Must be closed before this end of file
───╯
Error: Unexpected end of input, expected (, ), parsing list
   ╭─[tests/parse/error/list_unclosed.scm:1:6]
   │
 1 │ (3132
   ·      ┬  
   ·      ╰── Unexpected end of file
───╯
